# tradewars-ansi-p2p

./: .gitignore  LICENSE  README.md  bootstrap.json  pyproject.toml  twansi_policy.json
.github/workflows/: ci.yml
docs/: agent_api.md  gameplay.md  ops.md  protocol.md
src/twansi/: config.py  identity.py  main.py  policy.py
src/twansi/game/: alliances.py  balance.py  combat.py  combat2.py  economy.py  mapgen.py  market.py  missions.py  rules.py  ship.py  tech.py  tick.py
src/twansi/net/: bootstrap.py  discovery.py  gossip.py  membership.py  messages.py  netsplit.py  reliable.py  transport_udp.py
src/twansi/sim/: bots.py  loadgen.py
src/twansi/state/: digest.py  eventlog.py  models.py  snapshot.py  store_sqlite.py
src/twansi/ui/: input.py  layout.py  palette.py  panels.py  radar.py  terminal.py
tests/: test_ap_and_warps.py  test_bootstrap_merge.py  test_combat_balance.py  test_defense_upgrade.py  test_economy.py  test_identity_replay.py  test_market_and_tech.py  test_netsplit_merge.py  test_offline_digest.py  test_policy_epoch.py  test_ports.py  test_protocol.py  test_reliable_udp.py  test_station_market.py
